# chirp

./: .gitignore  Cargo.toml  README.md  shell.nix
.github/workflows/: ci.yml
src/: instructions.rs  lib.rs  main.rs  memory.rs  opcode.rs  register.rs
