[package]
name = "chirp"
version = "0.1.0"
authors = [ "Bernardo Meurer <meurerbernardo@gmail.com>" ]

categories = [ "emulators", "games" ]
description = "CHIP-8 Emulator"
documentation = "https://docs.rs/chirp"
edition = "2018"
homepage = "https://github.com/lovesegfault/chirp"
keywords = [ "chip-8", "chip", "8", "emulator", "game" ]
license = "BSD-3-Clause"
maintenance = { status = "actively-developed" }
readme = "./README.md"
repository = "https://github.com/lovesegfault/chirp"

[dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
