[package]
name = "chirp"
version = "0.1.0"
authors = [ "Bernardo Meurer <meurerbernardo@gmail.com>" ]

categories = [ "emulators", "games" ]
description = "CHIP-8 Emulator"
documentation = "https://docs.rs/chirp"
edition = "2018"
homepage = "https://github.com/lovesegfault/chirp"
keywords = [ "chip-8", "chip", "8", "emulator", "game" ]
license = "BSD-3-Clause"
readme = "./README.md"
repository = "https://github.com/lovesegfault/chirp"

[dependencies]
env_logger = "0.7.1"
log = "0.4.8"
# pixels = "0.0.2"
hexyl = "0.6.0"
structopt = "0.3.7"
thiserror = "1.0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
